fix(button): fix outline for dark mode

--- a/web-components/src/components/button/scss/button.scss
+++ b/web-components/src/components/button/scss/button.scss
@@ -228,7 +228,7 @@
         $color: $button--blue__background-color,
         $color-hover: $button__font-color--alt,
         $color-active: $button__font-color--alt,
-        $bg: $button--white__background-color,
+        $bg: var(--md-primary-bg-color),
         $box-shadow: $button--blue__border,
         $bg-hover: $button--blue__background-color--hover,
         $bg-active: $button--blue__background-color--active,
@@ -251,7 +251,7 @@
         $color: $button--red__background-color,
         $color-hover: $button__font-color--alt,
         $color-active: $button__font-color--alt,
-        $bg: $button--white__background-color,
+        $bg: var(--md-primary-bg-color),
         $box-shadow: $button--red__border,
         $bg-hover: $button--red__background-color--hover,
         $bg-active: $button--red__background-color--active,
@@ -274,7 +274,7 @@
         $color: $button--green__background-color,
         $color-hover: $button__font-color--alt,
         $color-active: $button__font-color--alt,
-        $bg: $button--white__background-color,
+        $bg: var(--md-primary-bg-color),
         $box-shadow: $button--green__border,
         $bg-hover: $button--green__background-color--hover,
         $bg-active: $button--green__background-color--active,
@@ -297,7 +297,7 @@
         $color: $button--orange__background-color,
         $color-hover: $button__font-color--alt,
         $color-active: $button__font-color--alt,
-        $bg: $button--white__background-color,
+        $bg: var(--md-primary-bg-color),
         $box-shadow: $button--orange__border,
         $bg-hover: $button--orange__background-color--hover,
         $bg-active: $button--orange__background-color--active,
@@ -319,7 +319,7 @@
         $color: $button--yellow__background-color,
         $color-hover: $button__font-color--alt,
         $color-active: $button__font-color--alt,
-        $bg: $button--white__background-color,
+        $bg: var(--md-primary-bg-color),
         $box-shadow: $button--yellow__border,
         $bg-hover: $button--yellow__background-color--hover,
         $bg-active: $button--yellow__background-color--active,
@@ -341,7 +341,7 @@
         $color: $button--mint__background-color,
         $color-hover: $button__font-color--alt,
         $color-active: $button__font-color--alt,
-        $bg: $button--white__background-color,
+        $bg: var(--md-primary-bg-color),
         $box-shadow: $button--mint__border,
         $bg-hover: $button--mint__background-color--hover,
         $bg-active: $button--mint__background-color--active,
@@ -363,7 +363,7 @@
         $color: $button--purple__background-color,
         $color-hover: $button__font-color--alt,
         $color-active: $button__font-color--alt,
-        $bg: $button--white__background-color,
+        $bg: var(--md-primary-bg-color),
         $box-shadow: $button--purple__border,
         $bg-hover: $button--purple__background-color--hover,
         $bg-active: $button--purple__background-color--active,
@@ -385,7 +385,7 @@
         $color: $button--pink__background-color,
         $color-hover: $button__font-color--alt,
         $color-active: $button__font-color--alt,
-        $bg: $button--white__background-color,
+        $bg: var(--md-primary-bg-color),
         $box-shadow: $button--pink__border,
         $bg-hover: $button--pink__background-color--hover,
         $bg-active: $button--pink__background-color--active,
@@ -407,7 +407,7 @@
         $color: $button--cyan__background-color,
         $color-hover: $button__font-color--alt,
         $color-active: $button__font-color--alt,
-        $bg: $button--white__background-color,
+        $bg: var(--md-primary-bg-color),
         $box-shadow: $button--cyan__border,
         $bg-hover: $button--cyan__background-color--hover,
         $bg-active: $button--cyan__background-color--active,
@@ -428,7 +428,7 @@
     &--white.md-button--outline {
       @include button-color(
         $color: $md-gray-70,
-        $bg: $button--white__background-color,
+        $bg: var(--md-primary-bg-color),
         $box-shadow: $button--white__border,
         $bg-hover: $button--white__background-color--hover,
         $bg-active: $button--white__background-color--active,
@@ -450,7 +450,7 @@
         $color: $button--dark-gray__background-color,
         $color-hover: $button__font-color--alt,
         $color-active: $button__font-color--alt,
-        $bg: $button--white__background-color,
+        $bg: var(--md-primary-bg-color),
         $box-shadow: $button--dark-gray__border,
         $bg-hover: $button--dark-gray__background-color--hover,
         $bg-active: $button--dark-gray__background-color--active,
@@ -472,7 +472,7 @@
         $color: $button--duck-egg__background-color,
         $color-hover: $button__font-color--alt,
         $color-active: $button__font-color--alt,
-        $bg: $button--white__background-color,
+        $bg: var(--md-primary-bg-color),
         $box-shadow: $button--duck-egg__border,
         $bg-hover: $button--duck-egg__background-color--hover,
         $bg-active: $button--duck-egg__background-color--active,
@@ -494,7 +494,7 @@
         $color: $button--violet__background-color,
         $color-hover: $button__font-color--alt,
         $color-active: $button__font-color--alt,
-        $bg: $button--white__background-color,
+        $bg: var(--md-primary-bg-color),
         $box-shadow: $button--violet__border,
         $bg-hover: $button--violet__background-color--hover,
         $bg-active: $button--violet__background-color--active,
